# CS332

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json.example  README.md  main.cpp  project.mk  provider.h  triangle  vcpkg.json
IndividualTask2Mark/: task.h
IndividualTask3Mark/: task.h
Lab03/Task1/: task1.cpp  task1.h
Lab03/Task1/Task1.3/: Task1.3.cpp
Lab03/Task2/: Task2.cpp
Lab03/Task3/: Task3.cpp
Lab05/: App.cpp  App.h  Task3.cpp  Task3.h
Lab05/LSystems/: Dragon.txt  Gosper Curve.txt  Hexagonal Tiling.txt  Hilbert Curve.txt  Koch Curve.txt  Koch Island.txt  Random Tree.txt  Sierpinski Curve.txt
docs/: lab3.md  lab4.md
greenTriangle/: triangle.h
greenTriangleMark/: triangle.h
indiv/: indiv.h  task1.cpp  task1.h
indiv3/: camera.h  field.h  gameobject.h  indiv.h  instanceMesh.h  mesh.h  model.cpp  model.h  shader.h  ship.h  spotlight.h
indiv3/resources/objs/bochka/: YIU9GYSZAN0DU9OFWL14RPMGO.mtl
indiv3/shaders/: instance.vs
indiv3/shaders/lighting/: full.fs
lab04/: App.cpp  App.h  lab.cpp  lab.h
lab04/utils/: utils.cpp
lab06/: lab.h  lab1.h
lab07/: task2.cpp  task2.h
lab08/: task3.cpp  task3.h
lab11/: lab11.h
lab12/: lab12.h
lab13/: lab13.h
lab14/: camera.h  lab14.h  main.cpp  mesh.h  model.cpp  model.h  shader.h  ship.h  spotlight.h
lab14/resources/objs/: Gato.mtl  GrumpyCat.mtl  Sherlock.mtl  StandingCat.mtl  bananaCat.mtl
lab14/shaders/lighting/: 5.1.ami_guch.fs  5.1.rim.fs  5.1.toonshading.fs  5.2.ami_guch.fs  5.2.rim.fs  5.2.toonshading.fs  5.4.ami_guch.fs  5.4.rim.fs  5.4.toonshading.fs
